fix(templates): dark mode active styles

--- a/packages/cli/fragments/_assets_/styles.css
+++ b/packages/cli/fragments/_assets_/styles.css
@@ -103,7 +103,7 @@ button {
     color: #ffffff;
     background-color: #0f0f0f98;
   }
-  button {
+  button:active {
     background-color: #0f0f0f69;
   }
 }
